adding column company in users table, adjusting users tests and authentications tests
